syntax = "proto3";

package proto;

service Chat {
  rpc SendPrompt (PromptRequest) returns (PromptResponse) {}
}

message PromptRequest {
  string prompt = 1;
}

message PromptResponse {
  string response = 1;
}